objects/PegaJwtSetting__mdt.object
<CustomObject>
    <description>Pega JWT Setting</description>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Audience</description>
        <inlineHelpText>Audience</inlineHelpText>
        <label>Audience</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <label>Certificate Name</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>ID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Issuer__c</fullName>
        <label>Issuer</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Endpoint__c</fullName>
        <label>Token Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PegaJwtSetting</label>
    <pluralLabel>PegaJwtSettings</pluralLabel>
</CustomObject>